<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var05.view.PracticalTest01Var05MainActivity" >
    <Button
        android:id="@+id/navigate_to_secondary_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/navigate_to_secondary_activity"
        />
    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigate_to_secondary_activity_button" >
        <Button
            android:id="@+id/top_left_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:text="@string/top_left_button"
            />

        <Button
            android:id="@+id/top_right_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/top_right_button" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/center_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_buttons" >
        <Button
            android:id="@+id/center_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_button"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_buttons" >
        <Button
            android:id="@+id/bottom_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_left_button"

            />

        <Button
            android:id="@+id/bottom_right_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/bottom_right_button" />
    </LinearLayout>
    <TextView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_buttons"/>
</RelativeLayout>